Run FindBugs: solve a couple of the issues reported